# python_package_template

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mypackage/: __init__.py  cli.py  package.py
src/python_package_template/: __init__.py  core.py  package.py
tests/: test_package.py
