[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "python-package-template"
version = "0.1.0"
description = "Minimal Python package template."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python_package_template"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# This template uses a fairly strict Ruff setup by default. The less universal
# rule families are marked below; comment them out if they are too noisy for a
# new project.
extend-select = [
  # Core Python style and modernization.
  "E",       # pycodestyle errors
  "W",       # pycodestyle warnings
  "I",       # import sorting
  "UP",      # Python modernization
  # Bug-risk checks.
  "B",       # flake8-bugbear bug patterns
  "BLE",     # blind except / bare except
  "PLE",     # pylint errors
  "PLW",     # pylint warnings
  "S",       # Bandit security checks; comment out if too noisy.
  # Maintainability checks.
  "A",       # flake8-builtins: avoid shadowing id/list/input/etc.
  "ARG",     # unused function arguments
  "C4",      # cleaner comprehensions
  "DTZ",     # timezone-aware datetimes
  "FBT003",  # boolean positional values in function calls
  "NPY",     # NumPy-specific checks
  "PERF",    # performance footguns
  "PTH",     # prefer pathlib over os.path
  "RET",     # return control-flow simplification
  "SIM",     # flake8-simplify
  # Logging and import hygiene.
  "G",       # logging format strings
  "LOG",     # logging anti-patterns
  "TC",      # type-checking import hygiene
  # Strict docs/annotations/tests. Comment these out for a looser template.
  "ANN201",  # public function return annotations
  "ANN202",  # private function return annotations
  "ANN204",  # special-method return annotations
  "D102",    # public method docstrings
  "D103",    # public function docstrings
  "D2",      # docstring whitespace/placement conventions
  "D4",      # docstring content conventions
  "PT",      # pytest style
  # Ruff suppression hygiene and narrow style correctness rules.
  "RUF100",  # unused noqa
  "RUF102",  # invalid noqa rule code
  "RUF104",  # unmatched ruff suppression comments
  "PLR0402", # prefer from-module imports for aliased submodule imports
  "PLR1722", # prefer sys.exit() over the interactive exit() helper
  "TRY203",  # useless try/except blocks that immediately re-raise
]

ignore = [
  # typing.cast(SomeType, value) is clearer than quoted type names.
  "TC006",
]

[tool.ruff.lint.per-file-ignores]
# Do not flag assert statements in tests.
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["python_package_template"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
